--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="wrapper">
-    <h1 class="text-center">URL Shortener</h1>
+    <h1 class="text-center sec-color">URL Shortener</h1>
 
     <%= form_with model: @url, remote: true do |form|  %>
       <div class="form-group mt-4">
