--- a/app/views/urls/create.html.erb
+++ b/app/views/urls/create.html.erb
@@ -1,2 +1,4 @@
-<h1>Result</h1>
-<%= @url.shortened_url %>
+<div class="result-container">
+<h1 class="sec-color mb-5">Result</h1>
+<div class="result sec-color"><%= @url.shortened_url %></div>
+</div>
