--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -1,35 +1,16 @@
 // Place all the styles related to the Urls controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  min-height: 100vh;
+.result-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #222 !important;
+}
 
-  .wrapper {
-    color: #fff;
-
-    h1 {
-      margin-bottom: 50px;
-      color: teal;
-    }
-
-    form {
-      border: 1px solid #e5e5e5;
-      padding: 30px 40px;
-
-      .btn {
-        background: teal;
-        color: #fff;
-      }
-    }
-  }
+.result {
+  background: #fff;
+  height: 100px;
+  width: 400px;
+  border-radius: 5px;
 }
